--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "employee-polls",
+  "name": "employee-polls-root",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css}'",
-    "tsc": "tsc --noEmit"
+    "start:frontend": "cd frontend && npm start",
+    "start:server": "cd server && npm start",
+    "install:frontend": "cd frontend && npm install",
+    "install:server": "cd server && npm install",
+    "lint": "eslint '*/**/*.{ts,tsx,js,jsx}' --ignore-pattern 'node_modules/'",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'",
+    "build": "tsc --noEmit -p tsconfig.json"
   },
   "eslintConfig": {
     "extends": [
@@ -29,25 +29,7 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@reduxjs/toolkit": "^2.2.3",
-    "normalize.css": "^8.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
-    "redux-thunk": "^3.1.0"
-  },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.78",
-    "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
@@ -55,11 +37,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "react-scripts": "^5.0.1",
-    "ts-jest": "^29.1.2",
     "typescript": "^4.9.5"
   }
 }
