--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,9 @@ frontend/node_modules
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.test
 
 npm-debug.log*
 yarn-debug.log*
