--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -18,10 +21,11 @@
     "@types/express": "^4.17.21",
     "@types/jasmine": "^3.10.18",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "@types/pg": "^7.14.11",
+    "@types/sequelize": "^4.28.20",
     "dotenv": "^16.4.5",
     "eslint-plugin-node": "^11.1.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   }
 }
