feature: Setup Models and Migrations (#12)
* Setup Docker and database configuration

- Added Docker Compose setup for development and testing databases.
- Configured environment variables and initialization scripts for PostgreSQL.
- Implemented basic database configuration in Node.js using
    environment-specific settings.

* feat: Setup Sequelize and models

* feat: Setup migrations, update models

* docs: Update Readme for db & migrations

--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "employee-polls-root",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "server",
+    "frontend"
+  ],
   "scripts": {
     "start:frontend": "cd frontend && npm start",
     "start:server": "cd server && npm start",
     "install:frontend": "cd frontend && npm install",
     "install:server": "cd server && npm install",
     "lint": "eslint '*/**/*.{ts,tsx,js,jsx}' --ignore-pattern 'node_modules/'",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'",
-    "build": "tsc --noEmit -p tsconfig.json"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "eslintConfig": {
     "extends": [
@@ -30,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
@@ -38,6 +42,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   }
 }
