--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,14 @@ frontend/node_modules
 /coverage
 
 # production
-/build
+frontend/build
+server/dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.test
 
 npm-debug.log*
 yarn-debug.log*
