--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
     "migrate:all": "npm run build && sequelize db:migrate"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
