--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "build": "tsc",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
-    "migrate:all": "npm run build && sequelize db:migrate"
+    "migrate:all": "npm run build && sequelize db:migrate",
+    "test": "cross-env NODE_ENV=test node -r dotenv/config ../node_modules/.bin/jest"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
@@ -22,15 +24,20 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/jasmine": "^3.10.18",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/pg": "^7.14.11",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.2",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
   }
 }
