--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
