--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,11 +42,17 @@
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "eslint-plugin-react": "^7.34.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
