--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,13 +39,13 @@
     "react-dom": "^18.0.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-typescript": "^7.24.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@types/axios": "^0.14.0",
