--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,12 +52,14 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "@types/redux-mock-store": "^1.0.6",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
     "eslint-plugin-react": "^7.34.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "react-scripts": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^29.1.2"
   }
 }
