--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "frontend"
   ],
   "scripts": {
-    "start:frontend": "cd frontend && npm start",
-    "start:server": "cd server && npm start",
-    "install:frontend": "cd frontend && npm install",
-    "install:server": "cd server && npm install",
+    "start": "concurrently \"npm:start-client\" \"npm:start-server\"",
+    "start-client": "cd frontend && npm start",
+    "start-server": "cd server && npm start",
+    "build": "concurrently \"npm:build-client\" \"npm:build-server\"",
+    "build-client": "cd frontend && npm run build",
+    "build-server": "cd server && npm run build",
+    "test": "concurrently \"npm:test-client\" \"npm:test-server\"",
+    "test-client": "cd frontend && npm test",
+    "test-server": "cd server && npm test",
     "lint": "eslint '*/**/*.{ts,tsx,js,jsx}' --ignore-pattern 'node_modules/'",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'"
   },
@@ -36,6 +41,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
