--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["./node_modules/*", "./src/types/*"]
     },
     "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
     "types": ["jest", "node"]
