--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,22 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "target": "es2021",
+    "module": "commonjs",
     "outDir": "./dist",
-    "lib": ["esnext"],
     "rootDir": "./src",
+    "lib": ["esnext"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "baseUrl": ".",
     "paths": {
       "*": ["./node_modules/*", "./src/types/*"]
     },
-    "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
-    "types": ["jest", "node"]
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["jest", "node"],
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
