prod: Remove tests from circleci

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
     "migrate:all": "sequelize db:migrate",
-    "test": "cross-env NODE_ENV=test node -r dotenv/config ../node_modules/.bin/jest"
+    "test": "cross-env NODE_ENV=test node -r dotenv/config ./node_modules/.bin/jest"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
