Production prep and CircleCI Configuration (#20)
* chore: remove unnecessary dependency

* feat: Write scripts for root level package

* docs: Document third-party package dependencies

* deploy: Update server build config for production

* docs: Update dependencies

* prod: Update packages

* prod: Add Procfile for beanstalk

* reformat prettier

* prod: Add prod build script to frontend

* prod: Update how server handles environment

* docs: Expand dependencies doc

* docs: Update Readme with new docs

* refactor: Remove npm workspaces configuration

* refactor: Remove root tsconfig

* prod: Setup CI/CD with circleci

* fix: Typo

* docs: Pipeline Process

* fix: linting

* fix: Pipeline missing install step

* prod: Remove tests from circleci

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,15 +1,29 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "target": "es2021",
+    "module": "commonjs",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "./node_modules/*",
+        "./server/node_modules/*",
+        "./frontend/node_modules/*"
+      ]
+    },
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "strict": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "../frontend/node_modules"]
 }
