--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "react-scripts start --project ./frontend",
     "build": "react-scripts build --project ./frontend",
+    "build-production": "REACT_APP_API_URL=http://employee-polling.us-east-2.elasticbeanstalk.com react-scripts build --project ./frontend",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\" --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -53,7 +54,6 @@
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "@types/redux-mock-store": "^1.0.6",
-    "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
     "eslint-plugin-react": "^7.34.1",
     "jest": "^29.7.0",
