--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc && zip -r dist.zip dist",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
-    "migrate:all": "npm run build && sequelize db:migrate",
-    "test": "cross-env NODE_ENV=test node -r dotenv/config ../node_modules/.bin/jest"
+    "migrate:all": "sequelize db:migrate",
+    "test": "cross-env NODE_ENV=test node -r dotenv/config ./node_modules/.bin/jest"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.11.5",
