Fix: different fix for eb cli & init

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
           node-version: '20.12' 
       - checkout
       - aws-cli/setup
+      - eb/setup
       - run:
           name: Set Up AWS Credentials
           command: |
@@ -61,10 +62,6 @@ jobs:
             aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
             aws configure set default.region $AWS_DEFAULT_REGION
-      - run:
-          name: Install EB CLI
-          command: |
-            pip install awsebcli --upgrade
       - run:
           name: Initialize Elastic Beanstalk CLI
           command: |
