--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           name: Initialize Elastic Beanstalk CLI
           command: |
             cd server
-            eb init -p node.js -r $AWS_DEFAULT_REGION Employee-polling-app-env
+            eb init -p node.js -r $AWS_DEFAULT_REGION $BEANSTALK_INSTANCE
       - run:
           name: Deploy Frontend to S3
           command: |
