--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           name: Initialize Elastic Beanstalk CLI
           command: |
             cd server
-            eb init -p node.js -r $AWS_DEFAULT_REGION $BEANSTALK_INSTANCE
+            eb init $EB_APP_NAME -r $AWS_DEFAULT_REGION -p node.js
       - run:
           name: Deploy Frontend to S3
           command: |
@@ -76,7 +76,7 @@ jobs:
           name: Deploy Backend to Elastic Beanstalk
           command: |
             echo "Deploying Backend to Elastic Beanstalk..."
-            eb deploy $BEANSTALK_INSTANCE
+            eb deploy $EB_ENV
             echo "Deployment completed."
 
 workflows:
