refactor: Stop tracking dist.zip

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
           paths:
             - frontend/build
             - server/dist
+            - server/dist.zip
 
   deploy:
     docker:
