--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && zip -r dist.zip dist",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
-    "migrate:all": "sequelize db:migrate",
+    "migrate:all": "npm run build && sequelize db:migrate",
     "test": "cross-env NODE_ENV=test node -r dotenv/config ./node_modules/.bin/jest"
   },
   "dependencies": {
