--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-client": "cd frontend && npm start",
     "start-server": "cd server && npm start",
     "build": "concurrently \"npm:build-client\" \"npm:build-server\"",
-    "build-client": "cd frontend && npm run build-production",
+    "build-client": "cd frontend && npm run build",
     "build-server": "cd server && npm run build",
     "test": "concurrently \"npm:test-client\" \"npm:test-server\"",
     "test-client": "cd frontend && npm test",
