--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.0"
   },
@@ -53,6 +54,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "@types/react-scroll": "^1.8.10",
     "@types/redux-mock-store": "^1.0.6",
     "babel-jest": "^29.7.0",
     "eslint-plugin-react": "^7.34.1",
