--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "react-scripts build --project ./frontend",
     "build-production": "REACT_APP_API_URL=https://employee-polling.us-east-2.elasticbeanstalk.com react-scripts build --project ./frontend",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\" --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -51,17 +53,22 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@types/axios": "^0.14.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "@types/react-scroll": "^1.8.10",
     "@types/redux-mock-store": "^1.0.6",
     "babel-jest": "^29.7.0",
+    "chalk": "^4.1.2",
+    "cypress": "^13.13.0",
     "eslint-plugin-react": "^7.34.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "typescript": "^4.9.5"
   }
 }
