--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2021",
     "module": "commonjs",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["cypress", "node", "jest"],
     "allowJs": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
@@ -12,11 +13,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "./node_modules/*",
-        "./server/node_modules/*",
-        "./frontend/node_modules/*"
-      ]
+      "*": ["./node_modules/*"]
     },
     "outDir": "./dist",
     "resolveJsonModule": true,
@@ -24,6 +21,6 @@
     "noEmit": true,
     "strict": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "../frontend/node_modules"]
+  "include": ["src/**/*", "cypress/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
