--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build": "concurrently \"npm:build-client\" \"npm:build-server\"",
     "build-client": "cd frontend && npm run build",
     "build-server": "cd server && npm run build",
-    "test": "concurrently \"npm:test-client\" \"npm:test-server\"",
+    "test": "concurrently \"npm:test-client\" \"npm:test-server\" \"npm:test-e2e\"",
     "test-client": "cd frontend && npm test",
     "test-server": "cd server && npm test",
+    "test-e2e": "cd frontend && npm run cypress:run",
     "lint": "eslint '*/**/*.{ts,tsx,js,jsx}' --ignore-pattern 'node_modules/'",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'"
   },
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
