--- a/environment/.env.template
+++ b/environment/.env.template
@@ -3,3 +3,6 @@ POSTGRES_USER=username
 POSTGRES_NAME=db_name
 POSTGRES_PASSWORD=super_secure_password
 POSTGRES_PORT=5432
+NODE_ENV=development
+JWT_SECRET=your_jwt_secret
+REACT_APP_API_URL=http://localhost:5000
