--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc && zip -r dist.zip dist",
+    "build": "tsc",
+    "zip": "zip -r dist.zip dist",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
     "migrate:all": "npm run build && sequelize db:migrate",
