--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,6 +37,8 @@
     "@types/pg": "^7.14.11",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "eslint-plugin-node": "^11.1.0",
