--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test-server": "cd server && npm test",
     "test-e2e": "cd frontend && npm run cypress:run",
     "lint": "eslint '*/**/*.{ts,tsx,js,jsx}' --ignore-pattern 'node_modules/'",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css}'",
+    "prepare": "husky install",
+    "postinstall": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
@@ -47,6 +51,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
+    "husky": "^8.0.3",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
