--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
       "last 1 safari version"
     ]
   },
+  "lint-staged": {
+    "*.{js,ts,tsx,css,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@commitlint/cli": "^19.3.0",
@@ -52,6 +58,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
