--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "lint-staged": {
-    "*.{js,ts,tsx,css,md}": [
+    "*.{js,ts,tsx,css}": [
       "eslint --fix",
       "prettier --write"
     ]
