--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.1.0",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
@@ -60,6 +63,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.7",
     "prettier": "^3.2.5",
+    "semantic-release": "^24.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
