--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,13 +11,13 @@
     "paths": {
       "*": ["./node_modules/*", "./src/types/*"]
     },
-    "typeRoots": ["./node_modules/@types"],
-    "types": ["jest", "node"],
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "types": ["jest", "node", "express"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
