ci: add server unit testing to ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,12 @@ jobs:
       - run:
           name: Lint
           command: |
-            npm run lint 
+            npm run lint
+      - run:
+          name: Run Tests
+          command: |
+            npm run test-server
+            echo "Tests completed successfully."
       - run:
           name: Front-End Build
           command: |
