Update Unit testing and add to CI (#58)
* chore: gitignore coverage reports

* chore: update jest test script

* refactor: minimize error logs

* test: update thorough user controller testing

* chore: update tsconfig type files

* test: add auth middleware tests

* test: add poll tests

* test: improve test coverage

* ci: add server unit testing to ci

* test: update frontend unit tests

* ci: add frontend unit tests to ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,13 @@ jobs:
       - run:
           name: Lint
           command: |
-            npm run lint 
+            npm run lint
+      - run:
+          name: Run Tests
+          command: |
+            npm run test-server
+            npm run test-client
+            echo "Tests completed successfully."
       - run:
           name: Front-End Build
           command: |
